test/Macros/CodiraifyImport/MacroErrors/DynamicEnum.code
// REQUIRES: language_language_parser

// RUN: %target-typecheck-verify-language %s -language-version 5 -module-name main -disable-availability-checking -typecheck -plugin-path %language-plugin-dir -verify

immutable countedBy = _CodiraifyInfo.countedBy(pointer: .param(1), count: "len")
// expected-error@+1{{expected _CodiraifyInfo enum literal as argument, got 'countedBy'}}
@_CodiraifyImport(countedBy)
fn myFunc(_ ptr: UnsafePointer<CInt>, _ len: String) {
}
